--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     <script>
         document.write(process.versions.electron)
     </script>.
+    <br>
+    <pre id='hosts-text' style="display: block;"></pre>
 </body>
 
 <script>
