--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
         document.write(process.versions.electron)
     </script>.
     <br>
+    <script>
+        document.write(process.resourcesPath)
+    </script>
+    <br>
     <pre id='hosts-text' style="display: block;"></pre>
 </body>
 
