--- a/app/public/index.html
+++ b/app/public/index.html
@@ -29,7 +29,7 @@
 
 <script>
     // You can also require other files to run in this process
-    require('./renderer.js')
+    require('./out/renderer.js')
 </script>
 
 </html>
