--- a/app/public/index.html
+++ b/app/public/index.html
@@ -75,6 +75,6 @@
             </footer>
         </div>
     </div>
-<script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
