--- a/src/index.html
+++ b/src/index.html
@@ -2,79 +2,65 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
+  <meta charset="UTF-8">
+  <title>Electron Hosts</title>
 </head>
 
 <body>
-    <div id="app">
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--no-drawer-button">
-            <header class="mdl-layout__header">
-                <div class="mdl-layout__header-row">
-                    <!-- Title -->
-                    <span class="mdl-layout-title">Electron Hosts</span>
-                    <!-- Add spacer, to align navigation to the right -->
-                    <div class="mdl-layout-spacer"></div>
-                    <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1123124124">account_box</div>
-                    <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
-                </div>
-            </header>
-            <main class="mdl-layout__content">
-                <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--no-drawer-button">
-                    <div class="mdl-layout__drawer">
-                        <span class="mdl-layout-title">Hello</span>
-                        <nav class="mdl-navigation">
-                            <a class="mdl-navigation__link" href="#">1</a>
-                            <a class="mdl-navigation__link" href="#">2</a>
-                            <a class="mdl-navigation__link" href="#">3</a>
-                            <a class="mdl-navigation__link" href="#">4</a>
-                        </nav>
-                    </div>
-                    <main class="mdl-layout__content">
-                        <div class="page-content">
-                            <div class="mdl-grid">
-                                <div class="mdl-cell mdl-cell--12-col">
-                                    <div id="icon" class="demo-card-event mdl-card mdl-card--border mdl-shadow--8dp">
-                                        <div class="mdl-card__title">
-                                            Icon
-                                        </div>
-                                        <div class="mdl-card__supporting-text">
-                                            <i class="material-icons">face</i>
-                                            <i class="material-icons">grade</i>
-                                            <i class="material-icons">alarm</i>
-                                            <i class="material-icons">favorite border</i>
-                                            <br>
-                                            <i class="material-icons">polymer</i>
-                                            <i class="material-icons">android</i>
-                                            <i class="material-icons">bluetooth</i>
-                                            <i class="material-icons">cast</i>
-                                            <br>
-                                            <i class="material-icons">tv</i>
-                                            <i class="material-icons">tablet</i>
-                                            <i class="material-icons">laptop</i>
-                                            <i class="material-icons">smartphone</i>
-                                        </div>
-                                        <div class="mdl-card__actions mdl-card--border">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </main>
-                </div>
-
-            </main>
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">Title</div>
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Privacy & Terms</a></li>
-                    </ul>
-                </div>
-            </footer>
+  <div id="app" class="app-class">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">Electron Hosts</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1123124124">account_box</div>
+          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
         </div>
+      </header>
+      <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Hello</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="#">1</a>
+          <a class="mdl-navigation__link" href="#">2</a>
+          <a class="mdl-navigation__link" href="#">3</a>
+          <a class="mdl-navigation__link" href="#">4</a>
+        </nav>
+      </div>
+      <main class="mdl-layout__content">
+        <div class="app-page-content page-content">
+          <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col">
+              <div id="icon" class="app-card mdl-card mdl-card--border mdl-shadow--8dp">
+                <div class="mdl-card__title">
+                  Icon
+                </div>
+                <div class="mdl-card__supporting-text">
+                  <i class="material-icons">face</i>
+                  <i class="material-icons">grade</i>
+                  <i class="material-icons">alarm</i>
+                  <i class="material-icons">favorite border</i>
+                  <br>
+                  <i class="material-icons">polymer</i>
+                  <i class="material-icons">android</i>
+                  <i class="material-icons">bluetooth</i>
+                  <i class="material-icons">cast</i>
+                  <br>
+                  <i class="material-icons">tv</i>
+                  <i class="material-icons">tablet</i>
+                  <i class="material-icons">laptop</i>
+                  <i class="material-icons">smartphone</i>
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
+  </div>
 </body>
 
 </html>
