--- a/app/public/index.html
+++ b/app/public/index.html
@@ -37,20 +37,7 @@
                   Icon
                 </div>
                 <div class="mdl-card__supporting-text">
-                  <i class="material-icons">face</i>
-                  <i class="material-icons">grade</i>
-                  <i class="material-icons">alarm</i>
-                  <i class="material-icons">favorite border</i>
-                  <br>
-                  <i class="material-icons">polymer</i>
-                  <i class="material-icons">android</i>
-                  <i class="material-icons">bluetooth</i>
-                  <i class="material-icons">cast</i>
-                  <br>
-                  <i class="material-icons">tv</i>
-                  <i class="material-icons">tablet</i>
-                  <i class="material-icons">laptop</i>
-                  <i class="material-icons">smartphone</i>
+                  <textarea id="app-editor"></textarea>
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
                 </div>
