--- a/app/public/index.html
+++ b/app/public/index.html
@@ -33,7 +33,7 @@
           <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--12-col">
               <div id="icon" class="app-card mdl-card mdl-card--border mdl-shadow--8dp">
-                <div class="mdl-card__title">
+                <div id="app-card-title" class="mdl-card__title">
                   Icon
                 </div>
                 <div class="mdl-card__supporting-text">
