--- a/app/public/index.html
+++ b/app/public/index.html
@@ -40,6 +40,9 @@
                   <textarea id="app-editor"></textarea>
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
+                  <a id="app-card-save" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">SAVE</a>
+                  <div class="mdl-layout-spacer"></div>
+                  <i class="material-icons">save</i>
                 </div>
               </div>
             </div>
