--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
 
 <body>
   <div id="app" class="app-class">
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--no-drawer-button">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
           <span class="mdl-layout-title">Electron Hosts</span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
-          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1123124124">account_box</div>
+          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
           <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
         </div>
       </header>
