--- a/src/index.html
+++ b/src/index.html
@@ -7,50 +7,9 @@
 </head>
 
 <body>
-  <div id="app" class="app-class">
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--no-drawer-button">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <!-- Title -->
-          <span class="mdl-layout-title">Electron Hosts</span>
-          <!-- Add spacer, to align navigation to the right -->
-          <div class="mdl-layout-spacer"></div>
-          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
-          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
-        </div>
-      </header>
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Hello</span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="#">1</a>
-          <a class="mdl-navigation__link" href="#">2</a>
-          <a class="mdl-navigation__link" href="#">3</a>
-          <a class="mdl-navigation__link" href="#">4</a>
-        </nav>
-      </div>
-      <main class="mdl-layout__content">
-        <div class="app-page-content page-content">
-          <div class="mdl-grid">
-            <div class="mdl-cell mdl-cell--12-col">
-              <div id="icon" class="app-card mdl-card mdl-card--border mdl-shadow--8dp">
-                <div id="app-card-title" class="mdl-card__title">
-                  Icon
-                </div>
-                <div class="mdl-card__supporting-text">
-                  <textarea id="app-editor"></textarea>
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                  <a id="app-card-save" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">SAVE</a>
-                  <div class="mdl-layout-spacer"></div>
-                  <i class="material-icons">save</i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
-    </div>
-  </div>
+  <app>
+    Loading...
+  </app>
 </body>
 
 </html>
