--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-  <app>
-    Loading...
-  </app>
+  <app>Loading...</app>
 <script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="entry.bundle.js"></script></body>
 
 </html>
